@@ -167,6 +167,21 @@ Oct&nbsp;1&nbsp;2002
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+Oct&nbsp;28&nbsp;2002
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Japanese Translation of Glade Tutorial</B>
+<P>
+Yasunari Imado has written a Japanese translation of the Glade tutorial,
+<a href="http://www.it-translation.net/members/y_imado/trans_doc/starting_off/glade-jp.html">"Starting off in Glade"</a>.
+</font></td></tr>
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 Oct&nbsp;7&nbsp;2002
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
