@@ -1,3 +1,7 @@
+2002-10-28  Damon Chaplin  <damon@ximian.com>
+
+	* index.html: added Yasunari Imado's Japanese translated tutorial.
+
 2002-10-21  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: added Meld.
